# reth-scaling

./: .gitignore  .gitmodules  Cargo.toml  README.md  dev-config.toml
account-seeder/: Cargo.toml  README.md  accounts.json
account-seeder/src/: main.rs
dynamic-scaling/: Cargo.toml  README.md  node-1.json  node-2.json  node-2.json.rootvx  node-3.json  node-3.json.rootvx  node-4.json  node-5.json  reth-scaling.service
geth/: README.md  genesis.json  verify_extradata.sh
reth-contract/: Cargo.toml  README.md  bytecode.txt  foundry.toml  tx.hash  tx.json
reth-contract/contracts/: MonetSmartContract.sol  SimpleStorage.sol.bkup
reth-contract/script/: MonetSmartContract.s.sol  SimpleStorage.s.sol
reth-contract/src/: main.rs
reth-scaling/: Cargo.toml  README.md  dev-genesis.json  funded-genesis.json  tx_stats.json  wallet.json
storage-proof/src/: main.rs
utils/: .env  Cargo.toml
