[package]
name = "account-seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
url = "2.5.0"