[package]
name = "dynamic-scaling"
version = "0.1.0"
edition = "2021"

# Specify the Rust toolchain version (optional)
[package.metadata]
rust-version = "1.65"  # Minimum Rust version required

# Dependencies
[dependencies]
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
web3 = "0.18"  # Ethereum JSON-RPC client
hex = "0.4"    # For encoding/decoding hexadecimal values
futures = "0.3" # For working with futures
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization
serde_json = "1.0"  # For JSON handling
dotenv = "0.15"  # For loading environment variables (optional)
ethers = "2.0"
eyre = "0.6.12"
clap = { version = "4.4", features = ["derive"] }


# Development dependencies (optional)
[dev-dependencies]
tokio-test = "0.4"  # For testing async code
