[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = "0.24"
ethereum-types = "0.12"
hex = "0.4"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
k256 = "0.13.4"
serde = "1.0.219"
serde_json = "1.0.105"